Fixing scroll button bugs on mobile.

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -77,6 +77,10 @@
   font-size: 1em;
 }
 
+.scroll {
+  width: 128px;
+}
+
 .scroll-right {
   bottom: -40px;
   right: 20px;
